name:                gl-texturing
version:             0.1.0.0
synopsis:            Texturing in OpenGL.
description:         Texturing in OpenGL.
license:             Apache-2.0
license-file:        LICENSE
author:              Cerek Hillen
maintainer:          cerekh@gmail.com
copyright:           2014, Cerek Hillen
category:            Graphics
build-type:          Simple
cabal-version:       >= 1.10

executable gl-texturing
  main-is:             Main.hs

  build-depends:       base             == 4.7.*
               ,       bytestring       == 0.10.*
               ,       JuicyPixels      == 3.1.*
               ,       JuicyPixels-repa == 0.7.*
               ,       GLFW             == 0.5.*
               ,       OpenGL

  hs-source-dirs:      src/

  default-language:    Haskell2010
